WIP: Add raft.api.MemberInfo
// FIXME: deal with InstallSnapshot payload version
// FIXME: add an issue

Change-Id: Iafc2b9eeb4ce5a7fafc467bc78606e58e65a240b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>